<resources>
    <string name="app_name">HealthMe</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_usuario">Usuário</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_confirmar_senha">Confimar senha</string>
    <string name="error_telefone">Telefone ja existe</string>
    <string name="campo_plano_saude">Plano de Saúde</string>
    <string name="text_login">Entrar</string>
    <string name="texto_registro">Registrar</string>
    <string name="error_menssagem_nome">Entre com nome completo</string>
    <string name="error_mensagem_usuario">Entre com usuário valido</string>
    <string name="error_menssagem_nascimento">Entre com idade</string>
    <string name="error_menssageg_senha">Entre com a senha </string>
    <string name="sucesso_messagem">Registrado com sucesso</string>
    <string name="texto_no_membro">Criar conta</string>
    <string name="texto_ja_membro">Já é um membro? faça login.</string>
    <string name="error_usuario_existe">Usuário já registrado.</string>
    <string name="erro_senha_comparar">Senhas não conferem.</string>
    <string name="erro_espaco_branco">Não deve conter espaço em branco.</string>
    <string name="erro_caracter_especial">Só pode conter letras e números.</string>
    <string name="erro_tamanho_login">Login inválido, verificar tamanho.</string>
    <string name="erro_tamanho_senha">Senha inválida, verificar tamanho.</string>
    <string name="erro_valido_usuario_senha">Usuário e/ou senha errados.</string>
    <string name="acao_configuracoes">Configurações</string>
    <string name="texto_ola">Ola,</string>
    <string name="titulo_activity_mapa">Mapa</string>
    <string name="emergencia">Emergência</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_logar">Log In</string>
    <string name="error_campo_vazio">Campo Vazio</string>
    <string name="title_activity_tela_inicial_nav">HealthMe</string>
    <string name="btn_panico">Pânico</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_voltarparatelainicial">Voltar para Home</string>

    <string-array name="planos_de_saude">
        <item>Plano de Saúde</item>
        <item>UNIMED</item>
        <item>SULAMERICA</item>
        <item>HAPVIDA</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="Sair">Sair</string>
</resources>
